# aion

./: .gitignore  Makefile
_notes/: premortem.txt
_notes/main/: 00_dailies.txt  01_misc.txt
aeon/: Makefile  bootstrap.sh  pyproject.toml
aeon/aeon/: auth.py  labeling.py  logging.py  prompt.py  utils.py
aeon/aeon/prompts/: extract_jokes.py
aeon/src/aeon/: cli.py  config.py  datasets.py  decorators.py  labeling.py  prompt.py  secrets.py
aeon/src/aeon/prompts/: _template.py  rewrite_joke_variant.py
notebooks/: 00-humor-data.ipynb  00-standup-transcript-dataset.ipynb  01-joke-logprobs.ipynb  TEMPLATE.ipynb
prompts/: extract_jokes.yaml
