[project]
name = "aeon"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "infisicalsdk>=1.0.3"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
