[project]
name = "aeon"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "datasets>=4.4.1",
    "infisicalsdk>=1.0.3",
    "lxml>=6.0.2",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "retry>=0.9.2",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.1.1",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
index-url = "https://pypi.org/simple/"
package = true
