[project]
name = "aeon"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "datasets>=4.4.1",
    "infisicalsdk>=1.0.3",
    "lxml>=6.0.2",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "retry>=0.9.2",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
    "numpy>=2.3.0,<2.4.0",

     # ARM Mac or GPU only
    'torch>=2.9.0,<3.0.0; platform_machine == "arm64" or platform_machine == "aarch64"',
    'transformers>=4.57.1; platform_machine == "arm64" or platform_machine == "aarch64"'
]

[project.scripts]
aeon = "aeon.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["aeon"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
index-url = "https://pypi.org/simple/"
package = true
